<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/ic_menu_heart"
        app:showAsAction="ifRoom"
        android:title="@string/favourites" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_menu_share"
        app:showAsAction="ifRoom"
        android:title="@string/share" />

    <item
        android:id="@+id/action_download"
        android:icon="@drawable/ic_menu_download"
        app:showAsAction="ifRoom"
        android:title="@string/download" />

    <item
        android:id="@+id/action_setAsWallpaper"
        android:icon="@drawable/ic_menu_screen"
        app:showAsAction="ifRoom"
        android:title="@string/set_as_wallpaper" />


</menu>